fix: correct overlapping underline in subtitle class

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,8 @@ footer a {
   border-bottom: 3px solid #000000;
   padding: 10px;
   font-size: 30px;
+  display: inline-block;
+  text-align: center;
 }
 
 .a-button {
